--- a/SpringMVC_Mybatis/src/main/resources/log4j.properties
+++ b/SpringMVC_Mybatis/src/main/resources/log4j.properties
@@ -23,5 +23,5 @@ log4j.appender.R.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%
 #log4j.logger.org.hibernate.cache=DEBUG
 #log4j.logger.com.opensymphony=DEBUG
 
-#log4j.logger.com.shinowit=DEBUG
+log4j.logger.com.shinowit.test=DEBUG
 
