--- a/SpringMVC_Mybatis/pom.xml
+++ b/SpringMVC_Mybatis/pom.xml
@@ -298,6 +298,13 @@
             <version>1.3.2</version>
         </dependency>
 
+        <!--java mail-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
     </dependencies>
 
 
